--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,10 @@
   "action": {
     "default_popup": "index.html",
     "default_title": "Generate Elevator Pitch"
+    "default_icon": {
+      "16": "favicon16.png",
+      "32": "favicon32.png"
+    }
   },
   "background": {
     "service_worker": "scripts/contextMenuServiceWorker.js"
