--- a/manifest.json
+++ b/manifest.json
@@ -4,18 +4,15 @@
   "version": "2.0",
   "manifest_version": 3,
   "icons": {
-    "48": "assets/48_goka.png",
-    "72": "assets/72_goka.png",
-    "96": "assets/96_goka.png",
-    "144": "assets/144_goka.png"
+    "16": "assets/favicon16.png",
+    "24": "assets/favicon24.png",
+    "32": "assets/favicon32.png",
+    "48": "assets/icon48.png",
+    "128": "assets/icon128.png"
   },
   "action": {
     "default_popup": "index.html",
     "default_title": "Generate Elevator Pitch"
-    "default_icon": {
-      "16": "favicon16.png",
-      "32": "favicon32.png"
-    }
   },
   "background": {
     "service_worker": "scripts/contextMenuServiceWorker.js"
